remove usages of deprecated JUnit4 apis