@@ -176,8 +176,7 @@ public abstract class AbstractProxyTest {
                 HttpHead request = new HttpHead(resourceUrl);
                 request.setConfig(TestUtils.REQUEST_TIMEOUT_CONFIG);
                 HttpResponse response = httpClient.execute(host, request);
-                contentLength = new Integer(response.getFirstHeader(
-                        "Content-Length").getValue());
+                contentLength = Integer.valueOf(response.getFirstHeader("Content-Length").getValue());
             }
 
             HttpGet request = new HttpGet(resourceUrl);
@@ -188,10 +187,9 @@ public abstract class AbstractProxyTest {
 
             if (contentLength != null) {
                 assertEquals(
-                        "Content-Length from GET should match that from HEAD",
-                        contentLength,
-                        new Integer(response.getFirstHeader("Content-Length")
-                                .getValue()));
+                  "Content-Length from GET should match that from HEAD",
+                  contentLength,
+                  Integer.valueOf(response.getFirstHeader("Content-Length").getValue()));
             }
             return new ResponseInfo(response.getStatusLine().getStatusCode(),
                     EntityUtils.toString(resEntity));
